UI: First Letter invisible/truncated #61300

Closed
opened 2019-02-08 00:23:36 +01:00 by Kent Davis · 26 comments

MacOS 10.14.3
2017
27"
5K

Blender 2.80
Screen Shot 2019-02-07 at 3.15.39 PM.png

MacOS 10.14.3 2017 27" 5K Blender 2.80 ![Screen Shot 2019-02-07 at 3.15.39 PM.png](https://archive.blender.org/developer/F6543446/Screen_Shot_2019-02-07_at_3.15.39_PM.png)
Author

Added subscriber: @Kent-Davis

Added subscriber: @Kent-Davis

#61322 was marked as duplicate of this issue

#61322 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Not a problem here, might be MAC only?...

@Kent-Davis : not sure why you mention "Edit > Preferences on THEME tab"? Are you saying this only happens when you change a color there? If so which one? So this is not a problem with Factory Settings?
(just checking to find the cause of this...)

Not a problem here, might be MAC only?... @Kent-Davis : not sure why you mention "Edit > Preferences on THEME tab"? Are you saying this only happens when you change a color there? If so which one? So this is not a problem with Factory Settings? (just checking to find the cause of this...)
Author

I just found out recent. Not worry about THEME.
I think so yes Mac but some time have Windows too I guess.
Interface on Resolution Scale
When drag become small text from big text cause appear "J" when become big text from small text cause disappear "J"
I show you on youtube.
When you see my mouse drag please look out on "J" on Object menu you will notice.
https://youtu.be/b7h8S6g-Vc0

I just found out recent. Not worry about THEME. I think so yes Mac but some time have Windows too I guess. Interface on Resolution Scale When drag become small text from big text cause appear "J" when become big text from small text cause disappear "J" I show you on youtube. When you see my mouse drag please look out on "J" on Object menu you will notice. https://youtu.be/b7h8S6g-Vc0
Member

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Member

OK, thanx for getting back.
Not familiar with font rendering, maybe @mont29 has an idea? or @fclem?

OK, thanx for getting back. Not familiar with font rendering, maybe @mont29 has an idea? or @fclem?
Author

Cool thanks

Cool thanks

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@Kent-Davis: I've noticed in all your bug reports that you attribute any and all your bugs to be Mac-specific. While there may be issues that only manifest themselves with a certain OS, GPU or driver, most bugs in Blender are not platform-related.

Anyway, this specific case is not a Mac issue, but related to using a very different theme, with things at very different scales.

Generally, there has been a bug throughout 2.8 that causes the first letter of text strings to get wrongly cut off:

Screenshot 2019-02-08 at 12.19.30.png

Screenshot 2019-02-08 at 12.19.39.png

So I think this is a bug, but not visible in the specific case posted when using the default theme. The bigger issue is the cutting off of the first letter of text strings in general.

@Kent-Davis: I've noticed in all your bug reports that you attribute any and all your bugs to be Mac-specific. While there may be issues that only manifest themselves with a certain OS, GPU or driver, most bugs in Blender are not platform-related. Anyway, this specific case is not a Mac issue, but related to using a very different theme, with things at very different scales. Generally, there has been a bug throughout 2.8 that causes the first letter of text strings to get wrongly cut off: ![Screenshot 2019-02-08 at 12.19.30.png](https://archive.blender.org/developer/F6548195/Screenshot_2019-02-08_at_12.19.30.png) ![Screenshot 2019-02-08 at 12.19.39.png](https://archive.blender.org/developer/F6548197/Screenshot_2019-02-08_at_12.19.39.png) So I think this is a bug, but not visible in the specific case posted when using the default theme. The bigger issue is the cutting off of the first letter of text strings in general.
Member

@WilliamReynish : wasnt aware of the "first-letter-gets-cut-off" thingie, has this been reported before?

@WilliamReynish : wasnt aware of the "first-letter-gets-cut-off" thingie, has this been reported before?

@lichtwerk I'm not sure if it has been reported in here, but we were aware of it during code quest.

@lichtwerk I'm not sure if it has been reported in here, but we were aware of it during code quest.
Philipp Oeser changed title from Invisible text to UI: First Letter invisible/truncated 2019-02-08 13:21:44 +01:00

To reproduce the issue set interface scalling (resolution scale) to 4.0

To reproduce the issue set interface scalling (resolution scale) to 4.0

Added subscriber: @ZedDB

Added subscriber: @ZedDB

When UI scale is set to 4x here, I see this:

Screenshot 2019-02-08 at 15.48.30.png

It's even worse!

But a retina scale of 4x is actually equivalent to 8x (!) UI scaling for peasants with low res screens.

Still, it shows the issue well :)

When UI scale is set to 4x here, I see this: ![Screenshot 2019-02-08 at 15.48.30.png](https://archive.blender.org/developer/F6549676/Screenshot_2019-02-08_at_15.48.30.png) It's even worse! But a retina scale of 4x is actually equivalent to 8x (!) UI scaling for peasants with low res screens. Still, it shows the issue well :)
Author

All of you yes true true trueeeeeee. Many thanks.

All of you yes true true trueeeeeee. Many thanks.

Added subscriber: @joshua.sterner

Added subscriber: @joshua.sterner
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I'm trying to figure out what is going on here (I don't have any experience with font rendering yet..)

The issue seems to be that J is the only letter (I could find) with "negative kerning" (how is this called?).

image.png

Then this check fails because the letter goes out of bounds: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenfont/intern/blf_glyph.c$507

I'm trying to figure out what is going on here (I don't have any experience with font rendering yet..) The issue seems to be that `J` is the only letter (I could find) with "negative kerning" (how is this called?). ![image.png](https://archive.blender.org/developer/F6821911/image.png) Then this check fails because the letter goes out of bounds: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenfont/intern/blf_glyph.c$507
Member

See xmin.

image.png

Possible fixes:

  1. The clip rectangle is wrong, it should be changed.
  2. The kerning of J is wrong.
  3. The intersection test should ignore "negative kerning" (we already ignore the text shadow, so this might not be a big deal).
See `xmin`. ![image.png](https://archive.blender.org/developer/F6821980/image.png) Possible fixes: 1. The clip rectangle is wrong, it should be changed. 2. The kerning of `J` is wrong. 3. The intersection test should ignore "negative kerning" (we already ignore the text shadow, so this might not be a big deal).

This issue was referenced by 7bfdf35711

This issue was referenced by 7bfdf357116f0f59b254adb334ae1c24530e904f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Not true. Let me tell you. L too https://dev-files.blender.org/file/data/n4vrc5eb2wrlph6wxww7/PHID-FILE-gw5t6du4puovop2x3aaw/Screenshot_2019-02-08_at_12.19.30.png
J and L and other letter. I just copy link and paste this here from above list.

Not true. Let me tell you. L too https://dev-files.blender.org/file/data/n4vrc5eb2wrlph6wxww7/PHID-FILE-gw5t6du4puovop2x3aaw/Screenshot_2019-02-08_at_12.19.30.png J and L and other letter. I just copy link and paste this here from above list.

@Kent-Davis do you build blender from source? if not, you need to wait tomorrow for the new build to have this patch included.

@Kent-Davis do you build blender from source? if not, you need to wait tomorrow for the new build to have this patch included.
Author

@fclem , Yes I agree with you and I will wait to see next day daily build download come soon.

@fclem , Yes I agree with you and I will wait to see next day daily build download come soon.
Author

@WilliamReynish You may check again on Blender 2.80 daily build if you can.
There has been fixed on J and L see picture I take snapshot.
Congratulation fixed and 3 list is pass.
Blender 2.8.png
@JacquesLucke
@fclem
Let's Close the ticket.

@WilliamReynish You may check again on Blender 2.80 daily build if you can. There has been fixed on J and L see picture I take snapshot. Congratulation fixed and 3 list is pass. ![Blender 2.8.png](https://archive.blender.org/developer/F6826928/Blender_2.8.png) @JacquesLucke @fclem Let's Close the ticket.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61300
No description provided.